--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -12,6 +12,7 @@ RUN bun run db:generate
 FROM base AS builder
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+RUN bun run codegen
 RUN bun --bun run build
 
 FROM base AS runner
